[package]
name = "crosstrait"
version = "0.1.2"
edition = "2021"
authors = ["Robert Jördens <rj@quartiq.de>"]
license = "MIT OR Apache-2.0"
description = "Cast from `dyn Any` to other trait objects, with no_std, no alloc support"
repository = "https://github.com/quartiq/crosstrait"
documentation = "https://docs.rs/crosstrait"
readme = "README.md"
categories = ["rust-patterns", "embedded", "no-std", "no-std::no-alloc"]
keywords = ["linkage", "trait", "cast", "any"]

[dependencies]
linkme = { version = "0.3", optional = true }
heapless = "0.8" # not(feature = "std")
gensym = "0.1"
once_cell = { version = "1.19", default-features = false, features = ["critical-section"], optional = true }

[features]
std = ["alloc", "once_cell/std", "global_registry"]
global_registry = ["dep:linkme", "dep:once_cell"]
used_linker = ["linkme?/used_linker"]
alloc = []
default = ["std"]
